dodano grafikę oraz cienie w nasz zespol

--- a/index.html
+++ b/index.html
@@ -114,6 +114,20 @@
         </ul>
     </section>
 </div>
+<div class="our-customer">
+    <section class="container">
+        <h2>Nasi klienci</h2>
+        <ul class="hp3-wrapper">
+            <li>1</li>
+            <li>1</li>
+            <li>1</li>
+            <li>1</li>
+            <li>1</li>
+            <li>1</li>
+            <li>1</li>
+        </ul>
+    </section>
+</div>
 </main> 
 <footer>
     <div class="container">
