dodano text-shadow

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </section>
     <div class="our-team">
     <section class="container">
-        <h2>Nasz zespół</h2>
+        <h2 class="our-team-title">Nasz zespół</h2>
         <ul class="hp3-wrapper">
             <li class="people">
                 <img src="./images/john1s.jpg" 
