--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1>EFEKTYWNE ROZWIĄZANIA <br/>DLA WASZEGO BIZNESU</h1> 
         <button type="button" class="button-bar">Zamów usługę</button>
     </div>
-    <section class="lorem">
+    <section>
     <div class="container">
         <ul class="h-wrapper">
         <li>
@@ -67,17 +67,19 @@
     </ul>
     </div>
     </section>
-    <section class="container">
+    <section>
+    <div class="container">
         <h2>Czym się zajmujemy</h2>
         <ul class="hp3-wrapper">
             <li><img src="./images/1s.jpg" alt="Pisanie na klawiaturze" width="370" height="294"> </li>
             <li><img src="./images/2s.jpg" alt="Praca ze smartfonem" width="370" height="294"> </li>
             <li><img src="./images/3s.jpg" alt="Praca z tabletem" width="370" height="294"> </li>
         </ul>
+    </div>
     </section>
-    <div class="our-team">
-    <section class="container">
-        <h2 class="our-team-title">Nasz zespół</h2>
+    <section class="our-team">
+        <div class="container">
+        <h2>Nasz zespół</h2>
         <ul class="hp3-wrapper">
             <li class="people">
                 <img src="./images/john1s.jpg" 
@@ -112,22 +114,8 @@
                         <div class="profession">UI Designer</div>
                 </li>
         </ul>
+        </div>
     </section>
-</div>
-<div class="our-customer">
-    <section class="container">
-        <h2>Nasi klienci</h2>
-        <ul class="hp3-wrapper">
-            <li>1</li>
-            <li>1</li>
-            <li>1</li>
-            <li>1</li>
-            <li>1</li>
-            <li>1</li>
-            <li>1</li>
-        </ul>
-    </section>
-</div>
 </main> 
 <footer>
     <div class="container">
