--- a/images/icommon/demo-external-svg.html
+++ b/images/icommon/demo-external-svg.html
@@ -17,7 +17,32 @@
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
+                <svg class="icon icon-antenna"><use xlink:href="symbol-defs.svg#icon-antenna"></use></svg><span class="name"> icon-antenna</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-astronaut"><use xlink:href="symbol-defs.svg#icon-astronaut"></use></svg><span class="name"> icon-astronaut</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-clock"><use xlink:href="symbol-defs.svg#icon-clock"></use></svg><span class="name"> icon-clock</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-diagram"><use xlink:href="symbol-defs.svg#icon-diagram"></use></svg><span class="name"> icon-diagram</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
                 <svg class="icon icon-instagram"><use xlink:href="symbol-defs.svg#icon-instagram"></use></svg><span class="name"> icon-instagram</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-facebook"><use xlink:href="symbol-defs.svg#icon-facebook"></use></svg><span class="name"> icon-facebook</span>
             </div>
         </div>
         <div class="glyph fs1">
@@ -27,32 +52,47 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-logoa"><use xlink:href="symbol-defs.svg#icon-logoa"></use></svg><span class="name"> icon-logoa</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-logob"><use xlink:href="symbol-defs.svg#icon-logob"></use></svg><span class="name"> icon-logob</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-logoc"><use xlink:href="symbol-defs.svg#icon-logoc"></use></svg><span class="name"> icon-logoc</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-logod"><use xlink:href="symbol-defs.svg#icon-logod"></use></svg><span class="name"> icon-logod</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-logof"><use xlink:href="symbol-defs.svg#icon-logof"></use></svg><span class="name"> icon-logof</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
                 <svg class="icon icon-twitter"><use xlink:href="symbol-defs.svg#icon-twitter"></use></svg><span class="name"> icon-twitter</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-email"><use xlink:href="symbol-defs.svg#icon-email"></use></svg><span class="name"> icon-email</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-Logo2"><use xlink:href="symbol-defs.svg#icon-Logo2"></use></svg><span class="name"> icon-Logo2</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-Logo1"><use xlink:href="symbol-defs.svg#icon-Logo1"></use></svg><span class="name"> icon-Logo1</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-Logo6"><use xlink:href="symbol-defs.svg#icon-Logo6"></use></svg><span class="name"> icon-Logo6</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-Logo5"><use xlink:href="symbol-defs.svg#icon-Logo5"></use></svg><span class="name"> icon-Logo5</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-Logo4"><use xlink:href="symbol-defs.svg#icon-Logo4"></use></svg><span class="name"> icon-Logo4</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-Logo3"><use xlink:href="symbol-defs.svg#icon-Logo3"></use></svg><span class="name"> icon-Logo3</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-smartphone"><use xlink:href="symbol-defs.svg#icon-smartphone"></use></svg><span class="name"> icon-smartphone</span>
             </div>
         </div>
   </div>
