--- a/index.html
+++ b/index.html
@@ -35,20 +35,24 @@
           </div>
           <div>
             <ul class="menu-contact">
-              <li class="address" >
-                <a href="mailto:info@example.com"><svg class="icon">
-                <use y="2"
+              <li>
+                <a class="address" href="mailto:info@example.com">
+                  <svg class="icon">
+                <use
+                y="2"
                 width="16"
                 height="12"
                 href="./images/icons.svg#icon-email"></use>
             </svg>info@example.com</a></li>
-              <li class="address">
-                <a href="tel:+48 111 111 111"><svg class="icon"><use    
-                y="2"
-                width="10"
-                height="16"
-                href="./images/icons.svg#icon-smartphone"></use>
-    </svg>+48 111 111 111</a></li>
+              <li>
+                <a class="address" href="tel:+48 111 111 111">
+                  <svg class="icon">
+                <use    
+                width="10px"
+                height="16px"
+                href="./images/icons.svg#icon-smartphone">
+              </use>
+              </svg>+48 111 111 111</a></li>
             </ul>
           </div>
     </header>
