--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
                                     x="12"
                                     y="12"
                                     href="./images/icons.svg#icon-twitter"
-                                    width="20"
-                                    height="20"
+                                    width="20px"
+                                    height="20px"
                                   ></use>
                                 </svg>
                                 </li>
@@ -423,17 +423,43 @@
 </main> 
 <footer>
     <div class="container">
-    <div class="second-font">
+      <div class="logo-footer">
+    <div class="second-font-footer">
         <span class="logo-left"> <a href="#">Web</a></span>
         <span class="logo-right-footer"> 
             <a href="#">Studio</a></span>
-    </div>
       <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-
       <ul class="menu-footer">
         <li><a href="mailto:info@example.com">info@example.com</a></li>
         <li><a href="tel:+48 111 111 111">+48 111 111 111</a></li>
       </ul>
+    </div>
+    <div class="social-links-footer">
+      <h3 class="h3-footer">Dołącz do nas</h3>
+          <ul class="social-list-footer">
+            <li>
+              <svg class="social-icons-footer" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="social-icons-footer" width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="social-icons-footer" width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="social-icons-footer" width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
 </footer>     
 </body>
