--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <li>
                 <a class="address" href="mailto:info@example.com">
                   <svg class="icon">
-                <use
+                <use class="icon-email"
                 y="2"
                 width="16"
                 height="12"
@@ -47,7 +47,7 @@
               <li>
                 <a class="address" href="tel:+48 111 111 111">
                   <svg class="icon">
-                <use    
+                <use class="icon-smartphone"   
                 width="10px"
                 height="16px"
                 href="./images/icons.svg#icon-smartphone">
