dodano wszystkie opcje

--- a/index.html
+++ b/index.html
@@ -159,46 +159,30 @@
                 <div class="box-social">
                     <ul class="icon-social">
                         <li>
-                        <svg>
+                        <svg width="20" height="20">
                           <use
-                          x="12"
-                          y="12"
-                            href="./images/icons.svg#icon-instagram"
-                            width="20"
-                            height="20"
+                            href="./images/icons.svg#icon-instagram2"
                           ></use>
                         </svg>
                         </li>
                         <li>
-                        <svg>
+                        <svg width="20" height="20">
                           <use
-                            x="12"
-                            y="12"
-                            href="./images/icons.svg#icon-twitter"
-                            width="20"
-                            height="20"
+                            href="./images/icons.svg#icon-twitter2"
                           ></use>
                         </svg>
                         </li>
                         <li>
-                        <svg>
+                        <svg width="20" height="20">
                           <use
-                            x="12"
-                            y="12"
-                            href="./images/icons.svg#icon-facebook"
-                            width="20"
-                            height="20"
+                          href="./images/icons.svg#icon-facebook2"
                           ></use>
                         </svg>
                         </li>
                         <li>
-                        <svg>
+                        <svg width="20" height="20">
                           <use
-                            x="12"
-                            y="12"
-                            href="./images/icons.svg#icon-linkedin"
-                            width="20"
-                            height="20"
+                            href="./images/icons.svg#icon-linkedin2"
                           ></use>
                         </svg> 
                         </li>
@@ -214,46 +198,30 @@
                         <div class="box-social">
                             <ul class="icon-social">
                                 <li>
-                            <svg>
+                            <svg width="20" height="20"> 
                                   <use
-                                    x="12"
-                                    y="12"
-                                    href="./images/icons.svg#icon-instagram"
-                                    width="20"
-                                    height="20"
+                                    href="./images/icons.svg#icon-instagram2"
                                   ></use>
                                 </svg>
                                 </li>
                                 <li>
-                                <svg>
+                                <svg width="20" height="20">
                                   <use
-                                    x="12"
-                                    y="12"
-                                    href="./images/icons.svg#icon-twitter"
-                                    width="20"
-                                    height="20"
+                                    href="./images/icons.svg#icon-twitter2"
                                   ></use>
                                 </svg>
                                 </li>
                                 <li>
-                                <svg>
+                                <svg width="20" height="20">
                                   <use
-                                    x="12"
-                                    y="12"
-                                    href="./images/icons.svg#icon-facebook"
-                                    width="20"
-                                    height="20"
+                                    href="./images/icons.svg#icon-facebook2"
                                   ></use>
                                 </svg>
                                 </li>
                                 <li>
-                                <svg>
+                                <svg width="20" height="20">
                                   <use
-                                    x="12"
-                                    y="12"
-                                    href="./images/icons.svg#icon-linkedin"
-                                    width="20"
-                                    height="20"
+                                    href="./images/icons.svg#icon-linkedin2"
                                   ></use>
                                 </svg> 
                                 </li>
@@ -270,46 +238,30 @@
                         <div class="box-social">
                             <ul class="icon-social">
                                 <li>
-                            <svg>
+                            <svg width="20" height="20">
                                   <use
-                                    x="12"
-                                    y="12"
-                                    href="./images/icons.svg#icon-instagram"
-                                    width="20"
-                                    height="20"
+                                    href="./images/icons.svg#icon-instagram2"
                                   ></use>
                                 </svg>
                                 </li>
                                 <li>
-                                <svg>
+                                <svg width="20" height="20">
                                   <use
-                                    x="12"
-                                    y="12"
-                                    href="./images/icons.svg#icon-twitter"
-                                    width="20"
-                                    height="20"
+                                    href="./images/icons.svg#icon-twitter2"
                                   ></use>
                                 </svg>
                                 </li>
                                 <li>
-                                <svg>
+                                <svg width="20" height="20">
                                   <use
-                                    x="12"
-                                    y="12"
-                                    href="./images/icons.svg#icon-facebook"
-                                    width="20"
-                                    height="20"
+                                    href="./images/icons.svg#icon-facebook2"
                                   ></use>
                                 </svg>
                                 </li>
                                 <li>
-                                <svg>
+                                <svg width="20" height="20">
                                   <use
-                                    x="12"
-                                    y="12"
-                                    href="./images/icons.svg#icon-linkedin"
-                                    width="20"
-                                    height="20"
+                                    href="./images/icons.svg#icon-linkedin2"
                                   ></use>
                                 </svg> 
                                 </li>
@@ -325,46 +277,30 @@
                         <div class="box-social">
                             <ul class="icon-social">
                                 <li>
-                            <svg>
+                            <svg width="20" height="20">
                                   <use
-                                    x="12"
-                                    y="12"
-                                    href="./images/icons.svg#icon-instagram"
-                                    width="20"
-                                    height="20"
+                                    href="./images/icons.svg#icon-instagram2"
                                   ></use>
                                 </svg>
                                 </li>
                                 <li>
-                                <svg>
+                                <svg width="20" height="20">
                                   <use
-                                    x="12"
-                                    y="12"
-                                    href="./images/icons.svg#icon-twitter"
-                                    width="20px"
-                                    height="20px"
+                                    href="./images/icons.svg#icon-twitter2"
                                   ></use>
                                 </svg>
                                 </li>
                                 <li>
-                               <svg>
+                               <svg width="20" height="20">  
                                   <use
-                                    x="12"
-                                    y="12"
-                                    href="./images/icons.svg#icon-facebook"
-                                    width="20"
-                                    height="20"
+                                    href="./images/icons.svg#icon-facebook2"
                                   ></use>
                                 </svg>
                                 </li>
                                 <li>
-                                <svg>
+                                <svg width="20" height="20">
                                   <use
-                                    x="12"
-                                    y="12"
-                                    href="./images/icons.svg#icon-linkedin"
-                                    width="20"
-                                    height="20"
+                                    href="./images/icons.svg#icon-linkedin2"
                                   ></use>
                                 </svg> 
                                 </li>
@@ -424,7 +360,7 @@
 <footer>
     <div class="container">
       <div class="logo-footer">
-    <div class="second-font-footer">
+    <div>
         <span class="logo-left"> <a href="#">Web</a></span>
         <span class="logo-right-footer"> 
             <a href="#">Studio</a></span>
