--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </section>
     <section class="our-team">
         <div class="container">
-        <h2 class="our-team-title">Nasz zespół</h2>
+        <h2>Nasz zespół</h2>
         <ul class="hp3-wrapper">
             <li class="people">
                 <img src="./images/john1s.jpg" 
