--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="zadaniedomowe1DamianPiechota">
-    <title>PracaDomowa3DamianPiechota</title>
+    <title>PracaDomowa5DamianPiechota</title>
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -27,6 +27,11 @@
           </div>
           <nav>
             <ul class="menu">
+              <svg class="hover">
+                <use 
+                height="12"
+                width="61"
+                href="./images/icons.svg#hover"></use></svg>
               <li><a href="./index.html">Agencja</a></li>
               <li><a href="./portfolio.html">Portfolio</a></li>
               <li><a href="#">Kontakt</a></li>
