--- a/index.html
+++ b/index.html
@@ -27,12 +27,7 @@
           </div>
           <nav>
             <ul class="menu">
-              <svg class="hover">
-                <use 
-                height="12"
-                width="61"
-                href="./images/icons.svg#hover"></use></svg>
-              <li><a href="./index.html">Agencja</a></li>
+              <li><a  class="hover-menu" href="./index.html">Agencja</a></li>
               <li><a href="./portfolio.html">Portfolio</a></li>
               <li><a href="#">Kontakt</a></li>
             </ul>
@@ -144,9 +139,14 @@
     <div class="container">
         <h2>Czym się zajmujemy</h2>
         <ul class="hp3-wrapper">
-            <li><img src="./images/1s.jpg" alt="Pisanie na klawiaturze" width="370" height="294"> </li>
-            <li><img src="./images/2s.jpg" alt="Praca ze smartfonem" width="370" height="294"> </li>
-            <li><img src="./images/3s.jpg" alt="Praca z tabletem" width="370" height="294"> </li>
+            <div class="box1">
+              <div class="overlay">
+                <p>basdhdbashbdashhbba</p>
+              </div><li><img src="./images/1s.jpg" alt="Pisanie na klawiaturze" width="370" height="294"><div class="comuter-app"><h3>APLIKACJE KOMPUTEROWE</h3></div></li></div>
+            <li><img src="./images/2s.jpg" alt="Praca ze smartfonem" width="370" height="294"><div class="smart-app"><h3>APLIKACJE MOBILNE</h3></div> </li>
+            <li><img src="./images/3s.jpg" alt="Praca z tabletem" width="370" height="294"><div class="graphic-app">
+              <h3>ROZWIĄZANIA GRAFICZNE</h3>
+            </div> </li>
         </ul>
     </div>
     </section>
