--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
           </div>
           <nav>
             <ul class="menu">
-              <li><a href="./index.html">Agencja</a></li>
+              <li><a class="hover-menu" href="./index.html">Agencja</a></li>
               <li><a href="./portfolio.html">Portfolio</a></li>
               <li><a href="#">Kontakt</a></li>
             </ul>
