--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
           <nav>
             <ul class="menu">
               <li><a href="./index.html">Agencja</a></li>
-              <li><a class="hover-menu1" href="./portfolio.html">Portfolio</a></li>
+              <li><a class="hover-menu" href="./portfolio.html">Portfolio</a></li>
               <li><a href="#">Kontakt</a></li>
             </ul>
           </nav>
